components/iot-anomaly-detection/manifests/ito-anomaly-detection-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: anomaly-detection
  labels:
    component: serving
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: anomaly-detection-service
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
